--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
         </form>
         <script src="/socket.io/socket.io.js"></script>
         <script>
+            let nickName = prompt("What's your nickname?");
+            localStorage.setItem("name", nickName);
+
             let socket = io();
 
             let form = document.getElementById("form");
@@ -70,17 +73,21 @@
             form.addEventListener("submit", function (e) {
                 e.preventDefault();
                 if (input.value) {
-                    socket.emit("chat message", input.value);
+                    socket.emit("chat message", {
+                        user: nickName,
+                        message: input.value,
+                    });
                     input.value = "";
                 }
             });
 
-            socket.on("message update", function (msg) {
-                console.log("got it");
-                let item = document.createElement("li");
-                item.textContent = msg;
-                messages.appendChild(item);
-                window.scrollTo(0, document.body.scrollHeight);
+            socket.on("message update", function (data) {
+                if (data.user !== nickName) {
+                    let item = document.createElement("li");
+                    item.textContent = `${data.user}: ${data.message}`;
+                    messages.appendChild(item);
+                    window.scrollTo(0, document.body.scrollHeight);
+                }
             });
         </script>
     </body>
