--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             #form {
                 background: rgba(0, 0, 0, 0.15);
                 padding: 0.25rem;
-                position: fixed;
+                /* position: fixed; */
                 bottom: 0;
                 left: 0;
                 right: 0;
@@ -46,6 +46,8 @@
                 list-style-type: none;
                 margin: 0;
                 padding: 0;
+                height: 200px;
+                overflow-y: auto;
             }
             #messages > li {
                 padding: 0.5rem 1rem;
@@ -53,42 +55,54 @@
             #messages > li:nth-child(odd) {
                 background: #efefef;
             }
+            .chat_box {
+                width: 600px;
+                margin: 20px auto;
+            }
         </style>
     </head>
     <body>
-        <ul id="messages"></ul>
-        <form id="form" action="">
-            <input id="input" autocomplete="off" /><button>Send</button>
-        </form>
-        <script src="/socket.io/socket.io.js"></script>
-        <script>
-            let nickName = prompt("What's your nickname?");
-            localStorage.setItem("name", nickName);
+        <div class="chat_box">
+            <ul id="messages"></ul>
+            <form id="form" action="">
+                <input id="input" autocomplete="off" /><button>Send</button>
+            </form>
+            <script src="/socket.io/socket.io.js"></script>
+            <script></script>
+            <script>
+                let nickName = prompt("What's your nickname?");
+                localStorage.setItem("name", nickName);
 
-            let socket = io();
+                let socket = io();
 
-            let form = document.getElementById("form");
-            let input = document.getElementById("input");
+                let form = document.getElementById("form");
+                let input = document.getElementById("input");
 
-            form.addEventListener("submit", function (e) {
-                e.preventDefault();
-                if (input.value) {
-                    socket.emit("chat message", {
-                        user: nickName,
-                        message: input.value,
-                    });
-                    input.value = "";
-                }
-            });
+                form.addEventListener("submit", function (e) {
+                    e.preventDefault();
+                    if (input.value) {
+                        let item = document.createElement("li");
+                        item.textContent = `You: ${input.value}`;
+                        messages.appendChild(item);
+                        window.scrollTo(0, document.body.scrollHeight);
 
-            socket.on("message update", function (data) {
-                if (data.user !== nickName) {
-                    let item = document.createElement("li");
-                    item.textContent = `${data.user}: ${data.message}`;
-                    messages.appendChild(item);
-                    window.scrollTo(0, document.body.scrollHeight);
-                }
-            });
-        </script>
+                        socket.emit("chat message", {
+                            user: nickName,
+                            message: input.value,
+                        });
+                        input.value = "";
+                    }
+                });
+
+                socket.on("message update", function (data) {
+                    if (data.user !== nickName) {
+                        let item = document.createElement("li");
+                        item.textContent = `${data.user}: ${data.message}`;
+                        messages.appendChild(item);
+                        window.scrollTo(0, document.body.scrollHeight);
+                    }
+                });
+            </script>
+        </div>
     </body>
 </html>
